<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".ContactUsActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorWhite"
        app:title="@string/contact_us"
        app:titleTextColor="@color/colorBlack"
        app:navigationIcon="@drawable/ic_back"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="20sp"
        android:layout_below="@id/toolbar"
        android:layout_marginRight="20sp"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginBottom="10sp"
        android:textColor="@color/colorBlack"
        />

        <EditText
            android:id="@+id/nameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:paddingLeft="5sp"
            android:inputType="textPersonName"
            android:layout_marginBottom="10sp"
            android:background="@drawable/edit_text"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginBottom="10sp"
            android:textColor="@color/colorBlack"
            />

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:paddingLeft="5sp"
            android:paddingBottom="5sp"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10sp"
            android:background="@drawable/edit_text"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            android:layout_marginBottom="10sp"
            android:textColor="@color/colorBlack"
            />

        <EditText
            android:id="@+id/subjectEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:paddingLeft="5sp"
            android:singleLine="true"
            android:paddingBottom="5sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/edit_text"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:layout_marginBottom="10sp"
            android:textColor="@color/colorBlack"
            />

        <EditText
            android:id="@+id/messageEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:gravity="start"
            android:minLines="5"
            android:paddingBottom="5sp"
            android:paddingLeft="5sp"
            android:background="@drawable/edit_text"
            />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="wrap_content"/>
</RelativeLayout>